k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuario-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuario-service
  template:
    metadata:
      labels:
        app: usuario-service
    spec:
      containers:
        - name: usuario-service
          image: usuario-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
