k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuario-service
spec:
  selector:
    app: usuario-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
