k8s/usuario-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usuario-ingress
spec:
  rules:
    - host: rede.minikube
      http:
        paths:
          - path: /usuarios
            pathType: Prefix
            backend:
              service:
                name: usuario-service
                port:
                  number: 80
